[package]
name = "compactlog"
version = "0.1.0"
edition = "2021"
description = "A compact log server for storing and serving CT logs."

[profile.release]
strip = true
codegen-units = 1
lto = true
opt-level = 3

[dependencies]
slatedb = { git = "https://github.com/Barre/slatedb.git", rev = "3635d74448a7d9e83a2b41b76fe2e42915d397e7", features = [
    "lz4",
    "azure",
] }
num_cpus = "1.17.0"
bincode = { version = "2.0", features = ["std", "serde"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
x509-cert = "0.2"
der = "0.7"
pem-rfc7468 = "0.7"
sha2 = "0.10"
uuid = "1.17"
object_store = "0.12.1"
digest = "0.10"
hex = "0.4"
base64 = "0.22"
chrono = "0.4"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
signature = "2.2"
toml = "0.8"
config = "0.14"
rand = "0.8"
mimalloc = "0.1"
subtle = "2.5"
futures = "0.3"
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
subtle = "2.5"
