[package]
name = "compactlog"
version = "0.1.0"
edition = "2021"
description = "A compact log server for storing and serving CT logs."

[profile.release]
strip = true
codegen-units = 1
lto = true
opt-level = 3

[dependencies]
slatedb = { git = "https://github.com/Barre/slatedb.git", rev = "76476ca52dc3661911086d2a0a5123f8a50a1b6b", features = [
    "lz4",
    "azure",
] }
postcard = { version = "1.0", features = ["alloc", "use-std"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
x509-cert = { version = "0.2", features = ["builder", "hazmat"] }
der = "0.7"
spki = { version = "0.7", features = ["std"] }
pem-rfc7468 = "0.7"
sha2 = "0.10"
object_store = "0.12.2"
digest = "0.10"
hex = "0.4"
base64 = "0.22"
chrono = "0.4"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "ecdsa-core"] }
signature = "2.2"
toml = "0.8"
config = "0.15"
rand = "0.8"
tikv-jemallocator = { version = "0.6.0", features = ["background_threads"] }
subtle = "2.5"
futures = "0.3"
moka = { version = "0.12", features = ["future"] }
openssl = { version = "0.10", features = ["vendored"] }
csv = "1.3"
reqwest = { version = "0.12", features = ["rustls-tls"] }
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"

[dev-dependencies]
subtle = "2.5"
tempfile = "3.10"
spki = { version = "0.7", features = ["std"] }
