[package]
name = "compactlog"
version = "0.1.0"
edition = "2021"
description = "A compact log server for storing and serving CT logs."

[profile.release]
strip = true
lto = "fat"
opt-level = 3
codegen-units = 1

[dependencies]
slatedb = { git = "https://github.com/Barre/slatedb.git", rev = "5aaa4c8e879f82b19251a0b473666e241433334c", features = [
    "zstd",
    "azure",
    "foyer",
] }
postcard = { version = "1.1", features = ["alloc", "use-std"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["compression-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
x509-cert = { version = "0.2", features = ["builder", "hazmat"] }
der = "0.7"
spki = { version = "0.7", features = ["std"] }
pem-rfc7468 = "0.7"
sha2 = "0.10"
object_store = "0.12.2"
digest = "0.10"
hex = "0.4"
base64 = "0.22"
chrono = "0.4"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "ecdsa-core"] }
signature = "2.2"
toml = "0.8"
config = "0.15"
rand = "0.8"
tikv-jemallocator = { version = "0.6.0", features = ["background_threads"] }
subtle = "2.5"
futures = "0.3"
foyer = "0.17"
openssl = { version = "0.10", features = ["vendored"] }
csv = "1.3"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"
flate2 = "1.1"
num_cpus = "1.16"
rayon = "1.10"

[dev-dependencies]
subtle = "2.5"
tempfile = "3.10"
spki = { version = "0.7", features = ["std"] }
